samples/_failures_safe/1761223600_ac5be1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_806f9d46.c: In function ‘main’:
./samples/SAFE/__tmp_806f9d46.c:158:9: error: expected declaration or statement at end of input
  158 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_806f9d46.c:158:9: error: expected declaration or statement at end of input
